<resources>
    <string name="app_name">MedGoApp</string>
    <string name="second_button">Proceed</string>
    <string name="note">For educational purposes only :))</string>
    <string name="secondlogo">secondlogo</string>
    <string name="log_email">Email</string>
    <string name="log_password">Password</string>
    <string name="log_button">Login</string>
    <string name="log_text">New user? Register instead.</string>
    <string name="title_activity_content">Content</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello there,</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Medicines</string>
    <string name="menu_chat">Chat with MedGo</string>
    <string name="menu_wallet">My Wallet</string>
    <string name="menu_accset">Account Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="app_settings">Settings</string>
    <string name="help_center">Help Center</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Password (min 8 chars)</string>
    <string name="reg_button">Register</string>
    <string name="reg_text">Already have an account? Log in instead.</string>
    <string name="groupname">Developed by SADBOYS Inc.</string>
    <string name="logo">logo</string>
    <string name="action_about">About</string>
    <string name="action_sign_out">Sign out</string>
    <string name="first_name">First Name</string>
    <string name="last_">Last Name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign up</string>
    <string name="upload_image">Upload Profile Photo</string>
    <string name="wishlist">Wishlist</string>
    <string name="edit_profile_photo">Edit Profile Photo</string>

</resources>