<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_med"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_baseline_chat_24"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_baseline_account_balance_wallet_24"
            android:title="@string/menu_wallet" />
        <item
            android:id="@+id/nav_accset"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/account_settings" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/app_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_baseline_help_center_24"
            android:title="@string/help_center" />


    </group>
</menu>