<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.brentokloy.medgo.app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_chat"
        android:name="com.brentokloy.medgo.app.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/nav_wallet"
        android:name="com.brentokloy.medgo.app.ui.wallet.WalletFragment"
        android:label="@string/menu_wallet"
        tools:layout="@layout/fragment_wallet" />
    <fragment
        android:id="@+id/nav_accset"
        android:name="com.brentokloy.medgo.app.ui.accset.AccsetFragment"
        android:label="@string/menu_accset"
        tools:layout="@layout/fragment_accset" />
    <fragment
        android:id="@+id/nav_help"
        android:name="com.brentokloy.medgo.app.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.brentokloy.medgo.app.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>